Revision history for MooseX-Types

{{$NEXT}}

0.41      2013-12-21 17:21:41Z
        - reversed changes in 0.40, until compatibility issues with older
          Moose versions are figured out

0.40      2013-12-20 06:38:15Z
        - types are now properly installed into the proper package, so they
          survive namespace::autoclean

0.39      2013-11-30 18:31:32Z
        - more strict warnings checking in tests
        - re-release to fix compile test

0.38      2013-09-17 00:44:16Z (Karen Etheridge)
        - removed use of deprecated enum syntax

0.37      2013-09-08 21:58:26Z (Karen Etheridge)
        - removed use of deprecated Class::MOP::load_class
        - repository has moved to the GitHub Moose organization

0.36    2013-06-22 13:51:54 PDT-0700 (Karen Etheridge)
        - fixed failing tests on 5.8.5 due to incorrect == overload
        (RT#77100, Graham Knop)

0.35    2012-05-19
        - The new delegation code could fail when a type had no
          parent. Attempting to subtype Any was one way to trigger the
          bug. (Dave Rolsky)

        - The new delegation code broke calling ->can or ->isa on
          MooseX::Types::TypeDecorator as a class method. (Dave Rolsky)

0.34    2012-05-18
        - Special case new to avoid unexpected exceptions on unloaded classes

0.33    2012-05-18
        - Switch delegation order to prioritise type over class except for new

0.32    2012-05-18
        - Support delegation of methods to the class for class types
        - Factor out _try_delegate method

0.31    2011-12-22
        - Add support for qw( :all ) on MooseX::Types::Combine libraries. (kentnl)

0.30    2011-09-17
        - Fix a bug in the tests that caused failures with Moose HEAD. (doy)

0.29    2011-08-20
        - Require namespace::clean 0.19. Tests fail with 0.18. Reported by
          Ruslan Zakirov. RT #67923.

0.28    2011-08-02
        - Fixed git and bug tracking info in META.{yml,json}. Reported by